[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Felipe Tadeu <souzalima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"
inflect = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
