[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Felipe Tadeu <souzalima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.18"
pandas = "^1.5.3"
inflect = "^6.0.2"
numba = "^0.56.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
